# automono

./: .gitignore  INVOICE_AUTOMATION_SPEC.md  LICENSE  README.md  pyproject.toml  requirements.txt  type_check.py
examples/: typing_example.py
scripts/: encrypt_test_data.py
src/: conftest.py  main.py
src/adapters/browser/: __init__.py  selenium.py
src/adapters/config/: __init__.py  environment_config.py
src/adapters/costs_sources/digi/: digi_costs_source.py  digi_costs_source_adapter.py
src/adapters/costs_sources/emivasa/: emivasa_costs_source.py  emivasa_costs_source_adapter.py
src/adapters/costs_sources/repsol/: repsol_costs_source.py  repsol_costs_source_adapter.py  test_integration_repsol_costs_source.py  test_repsol_cost_source.py  test_repsol_costs_source.py
src/adapters/costs_sources/repsol/test_data/: repsol_invoice.encrypted
src/adapters/logger/: __init__.py  simple.py  structlog.py
src/core/domain/: archive_result.py  invoice.py  invoice_file.py  invoice_metadata.py  registered_invoice.py
src/core/ports/: browser.py  config.py  costs_registry.py  costs_source.py  invoice_archive.py  logger.py
src/core/usecases/: file_processing_service.py  idempotency_service.py  invoice_orchestrator.py
src/infrastructure/browser/: selenium_service.py
src/infrastructure/config/: settings.py
src/infrastructure/logging/: logger.py
tests/: README.md  conftest.py  run_comprehensive_test.py  run_download_test.py  run_invoices_test.py  run_repsol_exploration.py  run_simple_login.py
tests/integration/adapters/costs_sources/: __init__.py  test_repsol.py  test_repsol_comprehensive.py  test_repsol_download.py  test_repsol_explore.py  test_repsol_final.py  test_repsol_improved.py  test_repsol_invoices.py  test_repsol_simple.py  test_repsol_simple_login.py  test_repsol_targeted.py
tests/integration/end_to_end/exploration/: __init__.py
tests/unit/adapters/: test_repsol_adapter.py
tests/unit/core/: test_domain_models.py
